# gerenciador_comandas

./: alembic.ini  example.env  pyproject.toml
migrations/: env.py
migrations/versions/: 5eefcf93fbc3_tabelas_primordiais.py
src/: main.py
src/crud/: produto.py
src/database/: enviroment.py  session.py  settings.py
src/exceptions/: produto.py
src/models/: __init__.py  comanda.py  comanda_produto.py  produto.py
src/routers/: comanda.py  produto.py
src/schemas/: produto.py
test/: conftest.py
test/models/: test_produto.py
